Prevent login popup from being truncated

--- a/client/stylesheets/layout.styl
+++ b/client/stylesheets/layout.styl
@@ -28,7 +28,7 @@ body {
   }
   #sidebar {
     box-sizing: border-box;
-    overflow: hidden;
+    overflow: visible;
     padding: 0em 1.5em;
     positioning(absolute, 0, 0, auto, auto , (wrapperMaxWidth - contentMaxWidth) , 100%);
     .attribution {
